--- a/src/components/HeaderLink.astro
+++ b/src/components/HeaderLink.astro
@@ -16,9 +16,9 @@ const isActive = href === pathname || href === pathname.replace(/\/$/, '');
 	a {
 		display: inline-block;
 		text-decoration: none;
+		padding: 3px 6px;
 	}
-	a.active {
-		font-weight: bolder;
-		text-decoration: underline;
+	a:hover{
+		color: #dcaf32;
 	}
 </style>
