--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,48 +3,115 @@ import BaseHead from '../components/BaseHead.astro';
 import Header from '../components/Header.astro';
 import Footer from '../components/Footer.astro';
 import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
+import { getCollection } from 'astro:content';
+import FormattedDate from '../components/FormattedDate.astro';
+import IconTwitter from '../components/icons/iconTwitter.astro';
+import IconTikTok from '../components/icons/IconTikTok.astro'
+import IconTwitch from '../components/icons/IconTwitch.astro'
+const posts = (await getCollection('blog')).sort(
+	(a, b) => a.data.pubDate.valueOf() - b.data.pubDate.valueOf()
+);
+
 ---
 
 <!DOCTYPE html>
 <html lang="en">
 	<head>
 		<BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
+		<meta name="view-transition" content="same-origin" />
 	</head>
 	<body>
-		<Header title={SITE_TITLE} />
+		<Header />
 		<main>
-			<h1>🧑‍🚀 Hello, Astronaut!</h1>
-			<p>
-				Welcome to the official <a href="https://astro.build/">Astro</a> blog starter template. This
-				template serves as a lightweight, minimally-styled starting point for anyone looking to build
-				a personal website, blog, or portfolio with Astro.
-			</p>
-			<p>
-				This template comes with a few integrations already configured in your
-				<code>astro.config.mjs</code> file. You can customize your setup with
-				<a href="https://astro.build/integrations">Astro Integrations</a> to add tools like Tailwind,
-				React, or Vue to your project.
-			</p>
-			<p>Here are a few ideas on how to get started with the template:</p>
-			<ul>
-				<li>Edit this page in <code>src/pages/index.astro</code></li>
-				<li>Edit the site header items in <code>src/components/Header.astro</code></li>
-				<li>Add your name to the footer in <code>src/components/Footer.astro</code></li>
-				<li>Check out the included blog posts in <code>src/pages/blog/</code></li>
-				<li>Customize the blog post page layout in <code>src/layouts/BlogPost.astro</code></li>
-			</ul>
-			<p>
-				Have fun! If you get stuck, remember to <a href="https://docs.astro.build/"
-					>read the docs
-				</a> or <a href="https://astro.build/chat">join us on Discord</a> to ask questions.
-			</p>
-			<p>
-				Looking for a blog template with a bit more personality? Check out <a
-					href="https://github.com/Charca/astro-blog-template"
-					>astro-blog-template
-				</a> by <a href="https://twitter.com/Charca">Maxi Ferreira</a>.
-			</p>
+			<h1>Desarrollo web y diseño UI UX</h1>
+			<span>Blog destinado a mis apuntes y aprendizajes, más contenido en mis redes</span>
+			<div class="social">
+				<a href="https://twitter.com/casvaru" target="_blank"><IconTwitter/></a>
+				<a href="https://www.tiktok.com/@casvaru" target="_blank"><IconTikTok/></a>
+				<a href="https://www.twitch.tv/casvaru" target="_blank"><IconTwitch/></a>
+			</div>
+			<section>
+				<ul>
+					{
+						posts.map((post) => (
+							<li>
+								<FormattedDate date={post.data.pubDate} />
+								<a href={`/blog/${post.slug}/`}>{post.data.title}</a>
+								<p>{post.data.description}</p>
+							</li>
+						))
+					}
+				</ul>
+			</section>
 		</main>
 		<Footer />
 	</body>
 </html>
+<style>
+	main{
+		margin-top: 75px;
+	}
+	h1{
+		text-align: center;
+		padding: 10px 0px 10px 0px;
+		font-size: 2.6rem;
+	}
+	span{
+		display: flex;
+		justify-content: center;
+		font-style: italic;
+		color: #a8a8a8;
+	}
+	.social{
+		display: flex;
+		justify-content: center;
+		place-content: center;
+		padding: 20px 0px 40px 0px;
+		gap: 10px;
+	}
+	.social a:hover{
+		opacity: .5;
+	}
+	section{
+		display: flex;
+	}
+	ul {
+		display: flex;
+		flex-direction: column-reverse;
+		list-style-type: none;
+		padding: unset;
+	}
+	ul li {
+		display: flex;
+		flex-direction: column;
+		padding: 20px 0px;
+		border-bottom: 1px solid rgb(168, 168, 168);
+		transition: .1s ease-out;
+	}
+	ul li :global(time) {
+		flex: 0;
+		font-style: italic;
+		color: #595959;
+	}
+	ul li a:link{
+		position: relative;
+		font-size: 1.1rem;
+		transition: .1s ease-out;
+		color: #ffbb00;
+	}
+	ul li a:active{
+		color: rgb(255, 0, 191) !important;
+	}
+	ul li a:hover{
+		opacity: .7;
+		transition: .2s ease-in;
+		color: none !important;
+	}
+	ul li a:visited{
+		color: #fff0af;
+	}
+	ul li p{
+		padding: 5px 0px;
+		font-size: .9rem;
+	}
+</style>
