--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,67 +1,49 @@
-/*
-  The CSS in this style tag is based off of Bear Blog's default CSS.
-  https://github.com/HermanMartinus/bearblog/blob/297026a877bc2ab2b3bdfbd6b9f7961c350917dd/templates/styles/blog/default.css
-  License MIT: https://github.com/HermanMartinus/bearblog/blob/master/LICENSE.md
- */
+*{
+	margin: 0; padding: 0;
+	box-sizing: border-box;
+	color: #f2f2f2;
+}
 body {
-	font-family: Verdana, sans-serif;
+	font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 	margin: auto;
 	padding: 20px;
-	max-width: 65ch;
+	max-width: 75ch;
 	text-align: left;
-	background-color: #fff;
+	background-color: #130D17;
 	word-wrap: break-word;
 	overflow-wrap: break-word;
 	line-height: 1.5;
-	color: #444;
 }
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-strong,
-b {
-	color: #222;
-}
-a {
-	color: #3273dc;
-}
-nav a {
-	margin-right: 10px;
-}
-textarea {
+picture,
+video{
 	width: 100%;
-	font-size: 16px;
+	padding: 10px 0px;
 }
-input {
-	font-size: 16px;
+.iconAstro{
+	width: 24px; height: 24px;
 }
-content {
-	line-height: 1.6;
+@keyframes fade-in {
+  from { opacity: 0; }
 }
-table {
-	width: 100%;
+
+@keyframes fade-out {
+  to { opacity: 0; }
 }
-img {
-	max-width: 100%;
-	height: auto;
+
+@keyframes slide-from-right {
+  from { transform: translateX(30px); }
 }
-code {
-	padding: 2px 5px;
-	background-color: #f2f2f2;
+
+@keyframes slide-to-left {
+  to { transform: translateX(-30px); }
 }
-pre {
-	padding: 1rem;
+
+::view-transition-old(root) {
+  animation: 90ms cubic-bezier(0.4, 0, 1, 1) both fade-out,
+    300ms cubic-bezier(0.4, 0, 0.2, 1) both slide-to-left;
 }
-pre > code {
-	all: unset;
-}
-blockquote {
-	border: 1px solid #999;
-	color: #222;
-	padding: 2px 0px 2px 20px;
-	margin: 0px;
-	font-style: italic;
+
+::view-transition-new(root) {
+  animation: 210ms cubic-bezier(0, 0, 0.2, 1) 90ms both fade-in,
+    300ms cubic-bezier(0.4, 0, 0.2, 1) both slide-from-right;
 }
