--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,6 +1,6 @@
 ---
 const today = new Date();
-import IconTwitter from "./IconTwitter.astro"
+import IconTwitter from "./icons/IconTwitter.astro"
 import IconGithub from "./icons/iconGithub.astro"
 import IconTikTok from "./icons/IconTikTok.astro";
 ---
