--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -24,6 +24,38 @@ strong,
 b {
 	color: #f7f7f7;
 }
+#searchForm{
+	display: flex;
+	justify-content: center;
+	width: 100%;
+}
+.containerSearch{
+	width: 100%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	background: #201627;
+	border-radius: 20px;
+	padding: 0px 20px;
+	margin: 30px 0px;
+	transition: .3s ease-in;
+}
+.containerSearch:hover{
+	background: #35283f;
+	transition: .1s ease-out;
+}
+.containerSearch form label{
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+#searchInput{
+	width: 100%;
+	padding: 20px 15px;
+	border: none;
+	outline: none;
+	background: transparent;
+}
 h2{
 	padding-left: 5px;
 	border-left: 3px solid #871846;
