--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -5,12 +5,12 @@ import { SITE_TITLE } from '../consts';
 ---
 
 <header>
-	<a href="/" class="logo">
+	<a href="/" tabindex="1" aria-label="Regresa a la página de inicio"class="logo">
 		<Logo/>
 	</a>
 	<nav>
-		<HeaderLink href="/">Inicio</HeaderLink>
-		<HeaderLink href="https://www.casvaru.com">Portafolio</HeaderLink>
+		<HeaderLink tabindex="2" href="/">Inicio</HeaderLink>
+		<HeaderLink tabindex="3" href="https://www.casvaru.com">Portafolio</HeaderLink>
 	</nav>
 </header>
 <style>
