--- a/src/components/ShortKey/ShortKey.astro
+++ b/src/components/ShortKey/ShortKey.astro
@@ -3,7 +3,7 @@ interface Props{
   command:String,
   key:String
 }
-import style from './styles/ShortKey.module.css'
+import style from './ShortKey.module.css'
 
 const {command = "Ctrl", key = "default"} = Astro.props
 ---
