--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -14,8 +14,8 @@ const { title, description, pubDate, updatedDate, heroImage, author, timeToRead,
 	<head>
 		<BaseHead title={title} description={description} />
 	</head>
-
 	<body>
+		<a class="hiddenTab" href="/">Ir al inicio</a>
 		<Header />
 		<main>
 			<article>
