--- a/src/components/FormattedDate.astro
+++ b/src/components/FormattedDate.astro
@@ -8,10 +8,11 @@ const { date } = Astro.props;
 
 <time datetime={date.toISOString()}>
 	{
-		date.toLocaleDateString('en-us', {
+		date.toLocaleDateString('es-CO', {
+			// weekday:"long",
 			year: 'numeric',
-			month: 'short',
-			day: 'numeric',
+			month: 'long',
+			day: '2-digit',
 		})
 	}
 </time>
