add temp page 404

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -11,6 +11,7 @@
 	--bg-searchbar:#201627;
 	--bg-listSearchbar:#110c14;
 	--border-radius:15px;
+	--mainColor:#871846;
 }
 .hiddenTab{
 	position: fixed;
